--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Videos Manguis Producciones
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: El Imperio de las Vacas
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/34042230?s=400&u=edf065813af299ff16cb9b65261d6e29b169c004&v=4
 
 #
 # Flags below are optional
