--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Name of your site (displayed in the header)
-name: Isard Miralles
+name: Videos Manguis
 
 # Short bio or description (displayed in the header)
-description: Dissenyador, il·lustrador i músic de Barcelona
+description: Notícias, cine, series, humor, reviews y más cosas así en plan Youtuber
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://{{ site.baseurl }}/hipertextos/brand/icon.jpg
 
 #
 # Flags below are optional
@@ -17,23 +17,23 @@ footer-links:
   email: isardmt@gmail.com
   facebook: Isard-Miralles-261219727225263
   flickr:
-  github: isardmt/isardmt.github.io
-  behance: isardmiralles
-  instagram: isardmt
+  github:
+  behance: 
+  instagram: videosmanguis
   linkedin:
   pinterest:
   rss: rss
-  twitter: isardmt
+  twitter: videosmanguis
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: c/IsardMiralles
   googleplus: # anything in your profile username that comes after plus.google.com/  
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: isard-miralles
+disqus:
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-1636204-1
+google_analytics: UA-1636204-8
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
