--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ name: Videos Manguis
 description: Notícias, cine, series, humor, reviews y más cosas así en plan Youtuber
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://{{ site.baseurl }}/hipertextos/brand/icon.jpg
+avatar: https://avatars3.githubusercontent.com/u/34042230?s=460&v=4
 
 #
 # Flags below are optional
