--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ description: Notícias, cine, series, humor, reviews y más cosas así en plan Y
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/34042230?s=460&v=4
 
+paginate: 2
+
 #
 # Flags below are optional
 #
