--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,12 @@ exclude:
   - README.md
   - CNAME
 
+related:
+  max_count: 5
+  min_score: 0.1
+  accuracy: 0.75
+  weights: {}
+
 # Defaults
 defaults:
   -
