--- a/_config.yml
+++ b/_config.yml
@@ -70,11 +70,10 @@ kramdown:
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
-
+# Use the following plug-ins
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-  - jekyll-related-posts
 
 # Exclude these files from your production _site
 exclude:
@@ -83,12 +82,6 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
-
-related:
-  max_count: 5
-  min_score: 0.1
-  accuracy: 0.75
-  weights: {}
 
 # Defaults
 defaults:
