--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   twitter: videosmanguis
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: c/VideosManguis
-  googleplus: videosmanguis  
+  googleplus:  
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
