--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Videos Manguis
 
 # Short bio or description (displayed in the header)
-description: Notícias, cine, series, humor, reviews y más cosas así en plan Youtuber
+description: Notícias, cine, series, humor y mucho más en plan Youtuber
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/34042230?s=460&v=4
