--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ google_analytics: UA-1636204-8
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://vacaceo.github.io/
+url: https://vacaceo.github.io/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
