--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RedirectMatch 404 \.(txt|yml)$
 # Force HTTPS
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://isardmiralles.com/$1 [R,L]
+RewriteRule ^(.*)$ https://videosmanguis.net/$1 [R,L]
 
 # Block fake traffic
 RewriteEngine On
