--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ google_analytics: UA-1636204-4
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.videosmanguis.net
+url: https://videosmanguis.net
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
